# Smart-home-based-on-STM32-and-Jiulian-tiger

./: README1.md
APP/: READEME.md  build-profile.json5
APP/entry/src/main/ets/pages/: Index.ets
Hadrdware/: bundle.json
Hadrdware/demo_test/: BUILD.gn  apps.c  apps.h  main.c  serial_uart.c
NAPI/: READEME.md  bundle.json
NAPI/appnapis/: @ohos.appnapis.d.ts  apps.c  apps_demo.cpp  serial_uart.h  um_gpio.h
Smart-home-based-on-STM32-and-Jiulian-tiger/: README.md
Smart-home-based-on-STM32-and-Jiulian-tiger/Hadrdware/: BUILD.gn  READEME.md
Smart-home-based-on-STM32-and-Jiulian-tiger/Hadrdware/demo_test/: serial_uart.h  um_adc.h  um_gpio.h
Smart-home-based-on-STM32-and-Jiulian-tiger/NAPI/: BUILD.gn
Smart-home-based-on-STM32-and-Jiulian-tiger/NAPI/appnapis/: BUILD.gn  apps.h  um_adc.h  um_pwm.h
stm32+freertos/: Project.uvguix.28794  Project.uvoptx  Project.uvprojx
stm32+freertos/APP/: app_getwd.c  app_getwd.h  app_task.c  app_task.h
stm32+freertos/FreeRTOS/: FreeRTOSConfig.h
stm32+freertos/Hardware/: Serial.c  Serial.h
stm32+freertos/User/: main.c
